--- a/demo-flat.html
+++ b/demo-flat.html
@@ -17,9 +17,14 @@
 
 	<script src="js/modernizr-2.7.1.min.js"></script>
 
+	<!--[if gt ie 8]><!-->
+	<script src="js/minify.min.js"></script>
+	<script src="js/scroll-no-hover.min.js"></script>
+	<script src="js/jquery-2.1.0.min.js"></script>
+	<!--<![endif]-->
+
 	<!--[if lt IE 9]>
 	<script src="js/html5shiv.js"></script>
-	<script src="js/respond.min.js"></script>
 	<![endif]-->
 </head>
 <body class="demo">
@@ -46,37 +51,37 @@
 
 			<div class="c"><p class="cell">100%</p></div>
 
-			<div class="c d2"><p class="cell">50%</p></div>
-			<div class="c d2"><p class="cell">50%</p></div>
+			<div class="c x1d2"><p class="cell">50%</p></div>
+			<div class="c x1d2"><p class="cell">50%</p></div>
 
-			<div class="c d3"><p class="cell">33.333%</p></div>
-			<div class="c d3"><p class="cell">33.333%</p></div>
-			<div class="c d3"><p class="cell">33.333%</p></div>
+			<div class="c x1d3"><p class="cell">33.333%</p></div>
+			<div class="c x1d3"><p class="cell">33.333%</p></div>
+			<div class="c x1d3"><p class="cell">33.333%</p></div>
 
-			<div class="c d4"><p class="cell">25%</p></div>
-			<div class="c d4"><p class="cell">25%</p></div>
-			<div class="c d4"><p class="cell">25%</p></div>
-			<div class="c d4"><p class="cell">25%</p></div>
+			<div class="c x1d4"><p class="cell">25%</p></div>
+			<div class="c x1d4"><p class="cell">25%</p></div>
+			<div class="c x1d4"><p class="cell">25%</p></div>
+			<div class="c x1d4"><p class="cell">25%</p></div>
 
-			<div class="c d6"><p class="cell">16.666%</p></div>
-			<div class="c d6"><p class="cell">16.666%</p></div>
-			<div class="c d6"><p class="cell">16.666%</p></div>
-			<div class="c d6"><p class="cell">16.666%</p></div>
-			<div class="c d6"><p class="cell">16.666%</p></div>
-			<div class="c d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
 
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
 
 			<div class="c x1d6"><p class="cell">16.666%</p></div>
 			<div class="c x5d6"><p class="cell">83.333%</p></div>
@@ -93,37 +98,37 @@
 
 			<div class="c"><p class="cell">100%</p></div>
 
-			<div class="c d2"><p class="cell">50%</p></div>
-			<div class="c d2"><p class="cell">50%</p></div>
+			<div class="c x1d2"><p class="cell">50%</p></div>
+			<div class="c x1d2"><p class="cell">50%</p></div>
 
-			<div class="c d3"><p class="cell">33.333%</p></div>
-			<div class="c d3"><p class="cell">33.333%</p></div>
-			<div class="c d3"><p class="cell">33.333%</p></div>
+			<div class="c x1d3"><p class="cell">33.333%</p></div>
+			<div class="c x1d3"><p class="cell">33.333%</p></div>
+			<div class="c x1d3"><p class="cell">33.333%</p></div>
 
-			<div class="c d4"><p class="cell">25%</p></div>
-			<div class="c d4"><p class="cell">25%</p></div>
-			<div class="c d4"><p class="cell">25%</p></div>
-			<div class="c d4"><p class="cell">25%</p></div>
+			<div class="c x1d4"><p class="cell">25%</p></div>
+			<div class="c x1d4"><p class="cell">25%</p></div>
+			<div class="c x1d4"><p class="cell">25%</p></div>
+			<div class="c x1d4"><p class="cell">25%</p></div>
 
-			<div class="c d6"><p class="cell">16.666%</p></div>
-			<div class="c d6"><p class="cell">16.666%</p></div>
-			<div class="c d6"><p class="cell">16.666%</p></div>
-			<div class="c d6"><p class="cell">16.666%</p></div>
-			<div class="c d6"><p class="cell">16.666%</p></div>
-			<div class="c d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
 
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
 
 			<div class="c x1d6"><p class="cell">16.666%</p></div>
 			<div class="c x5d6"><p class="cell">83.333%</p></div>
@@ -140,37 +145,37 @@
 
 			<div class="c"><p class="cell">100%</p></div>
 
-			<div class="c d2"><p class="cell">50%</p></div>
-			<div class="c d2"><p class="cell">50%</p></div>
+			<div class="c x1d2"><p class="cell">50%</p></div>
+			<div class="c x1d2"><p class="cell">50%</p></div>
 
-			<div class="c d3"><p class="cell">33.333%</p></div>
-			<div class="c d3"><p class="cell">33.333%</p></div>
-			<div class="c d3"><p class="cell">33.333%</p></div>
+			<div class="c x1d3"><p class="cell">33.333%</p></div>
+			<div class="c x1d3"><p class="cell">33.333%</p></div>
+			<div class="c x1d3"><p class="cell">33.333%</p></div>
 
-			<div class="c d4"><p class="cell">25%</p></div>
-			<div class="c d4"><p class="cell">25%</p></div>
-			<div class="c d4"><p class="cell">25%</p></div>
-			<div class="c d4"><p class="cell">25%</p></div>
+			<div class="c x1d4"><p class="cell">25%</p></div>
+			<div class="c x1d4"><p class="cell">25%</p></div>
+			<div class="c x1d4"><p class="cell">25%</p></div>
+			<div class="c x1d4"><p class="cell">25%</p></div>
 
-			<div class="c d6"><p class="cell">16.666%</p></div>
-			<div class="c d6"><p class="cell">16.666%</p></div>
-			<div class="c d6"><p class="cell">16.666%</p></div>
-			<div class="c d6"><p class="cell">16.666%</p></div>
-			<div class="c d6"><p class="cell">16.666%</p></div>
-			<div class="c d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
 
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
-			<div class="c d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
+			<div class="c x1d12"><p class="cell">8.333%</p></div>
 
 			<div class="c x1d6"><p class="cell">16.666%</p></div>
 			<div class="c x5d6"><p class="cell">83.333%</p></div>
@@ -187,37 +192,37 @@
 
 			<div class="c"><p class="cell">100%</p></div>
 
-			<div class="c d2"><p class="cell">50%</p></div>
-			<div class="c d2"><p class="cell">50%</p></div>
+			<div class="c x1d2"><p class="cell">50%</p></div>
+			<div class="c x1d2"><p class="cell">50%</p></div>
 
-			<div class="c d3"><p class="cell">33.333%</p></div>
-			<div class="c d3"><p class="cell">33.333%</p></div>
-			<div class="c d3"><p class="cell">33.333%</p></div>
+			<div class="c x1d3"><p class="cell">33.333%</p></div>
+			<div class="c x1d3"><p class="cell">33.333%</p></div>
+			<div class="c x1d3"><p class="cell">33.333%</p></div>
 
-			<div class="c d4"><p class="cell">25%</p></div>
-			<div class="c d4"><p class="cell">25%</p></div>
-			<div class="c d4"><p class="cell">25%</p></div>
-			<div class="c d4"><p class="cell">25%</p></div>
+			<div class="c x1d4"><p class="cell">25%</p></div>
+			<div class="c x1d4"><p class="cell">25%</p></div>
+			<div class="c x1d4"><p class="cell">25%</p></div>
+			<div class="c x1d4"><p class="cell">25%</p></div>
 
-			<div class="c d6"><p class="cell">16.666%</p></div>
-			<div class="c d6"><p class="cell">16.666%</p></div>
-			<div class="c d6"><p class="cell">16.666%</p></div>
-			<div class="c d6"><p class="cell">16.666%</p></div>
-			<div class="c d6"><p class="cell">16.666%</p></div>
-			<div class="c d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
+			<div class="c x1d6"><p class="cell">16.666%</p></div>
 
-			<div class="c d12"><p class="cell">8.33%</p></div>
-			<div class="c d12"><p class="cell">8.33%</p></div>
-			<div class="c d12"><p class="cell">8.33%</p></div>
-			<div class="c d12"><p class="cell">8.33%</p></div>
-			<div class="c d12"><p class="cell">8.33%</p></div>
-			<div class="c d12"><p class="cell">8.33%</p></div>
-			<div class="c d12"><p class="cell">8.33%</p></div>
-			<div class="c d12"><p class="cell">8.33%</p></div>
-			<div class="c d12"><p class="cell">8.33%</p></div>
-			<div class="c d12"><p class="cell">8.33%</p></div>
-			<div class="c d12"><p class="cell">8.33%</p></div>
-			<div class="c d12"><p class="cell">8.33%</p></div>
+			<div class="c x1d12"><p class="cell">8.33%</p></div>
+			<div class="c x1d12"><p class="cell">8.33%</p></div>
+			<div class="c x1d12"><p class="cell">8.33%</p></div>
+			<div class="c x1d12"><p class="cell">8.33%</p></div>
+			<div class="c x1d12"><p class="cell">8.33%</p></div>
+			<div class="c x1d12"><p class="cell">8.33%</p></div>
+			<div class="c x1d12"><p class="cell">8.33%</p></div>
+			<div class="c x1d12"><p class="cell">8.33%</p></div>
+			<div class="c x1d12"><p class="cell">8.33%</p></div>
+			<div class="c x1d12"><p class="cell">8.33%</p></div>
+			<div class="c x1d12"><p class="cell">8.33%</p></div>
+			<div class="c x1d12"><p class="cell">8.33%</p></div>
 
 			<div class="c x5d12"><p class="cell">41.666%</p></div>
 			<div class="c x7d12"><p class="cell">58.333%</p></div>
@@ -225,10 +230,5 @@
 
 	</article>
 
-	<!--[if gt ie 8]><!-->
-	<script src="js/minify.min.js"></script>
-	<script src="js/scroll-no-hover.min.js"></script>
-	<script src="js/jquery-2.1.0.min.js"></script>
-	<!--<![endif]-->
 </body>
 </html>
