--- a/demo-nested.html
+++ b/demo-nested.html
@@ -12,14 +12,21 @@
 
 	<title>Nested Grid Demo</title>
 
+	<link href="img/favicon.png"	rel="icon"	 type="image/png">
+
 	<link href="css/grid.css" rel="stylesheet">
 	<link href="css/skin.css" rel="stylesheet">
 
 	<script src="js/modernizr-2.7.1.min.js"></script>
 
+	<!--[if gt ie 8]><!-->
+	<script src="js/minify.min.js"></script>
+	<script src="js/scroll-no-hover.min.js"></script>
+	<script src="js/jquery-2.1.0.min.js"></script>
+	<!--<![endif]-->
+
 	<!--[if lt IE 9]>
 	<script src="js/html5shiv.js"></script>
-	<script src="js/respond.min.js"></script>
 	<![endif]-->
 </head>
 <body class="demo">
@@ -48,10 +55,10 @@
 
 			<div class="cc">
 				<div class="c"><p class="cell">Parent</p></div>
-				<div class="c d2"><p class="cell">Nested v1</p></div>
-				<div class="cc d2">
+				<div class="c x1d2"><p class="cell">Nested v1</p></div>
+				<div class="cc x1d2">
 					<div class="c"><p class="cell">Nested v1</p></div>
-					<div class="c d3"><p class="cell">Nested v2</p></div>
+					<div class="c x1d3"><p class="cell">Nested v2</p></div>
 					<div class="c x2d3"><p class="cell">Nested v2</p></div>
 				</div>
 			</div>
@@ -65,20 +72,15 @@
 
 			<div class="c"><p class="cell">c</p></div>
 
-			<div class="c d2"><p class="cell">d2</p></div>
-			<div class="c d2"><p class="cell">d2</p></div>
+			<div class="c x1d2"><p class="cell">d2</p></div>
+			<div class="c x1d2"><p class="cell">d2</p></div>
 
-			<div class="c d2"></div>
-			<div class="c d6"><p class="cell">d6</p></div>
-			<div class="c d3"><p class="cell">d3</p></div>
+			<div class="c x1d2"></div>
+			<div class="c x1d6"><p class="cell">d6</p></div>
+			<div class="c x1d3"><p class="cell">d3</p></div>
 		</section>
 
 	</article>
 
-	<!--[if gt ie 8]><!-->
-	<script src="js/minify.min.js"></script>
-	<script src="js/scroll-no-hover.min.js"></script>
-	<script src="js/jquery-2.1.0.min.js"></script>
-	<!--<![endif]-->
 </body>
 </html>
