--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="">
 
-	<title>HelloWorld</title>
+	<title>Quickstart</title>
 
 	<link href="css/grid.css" rel="stylesheet">
 	<link href="css/skin.css" rel="stylesheet">
 
 	<script src="js/modernizr-2.7.1.min.js"></script>
 
+	<!--[if gt ie 8]><!-->
+	<script src="js/minify.min.js"></script>
+	<script src="js/scroll-no-hover.min.js"></script>
+	<script src="js/jquery-2.1.0.min.js"></script>
+	<!--<![endif]-->
+
 	<!--[if lt IE 9]>
 	<script src="js/html5shiv.js"></script>
-	<script src="js/respond.min.js"></script>
 	<![endif]-->
 </head>
 <body class="demo">
 
 
 
-	<!--[if gt ie 8]><!-->
-	<script src="js/minify.min.js"></script>
-	<script src="js/scroll-no-hover.min.js"></script>
-	<script src="js/jquery-2.1.0.min.js"></script>
-	<!--<![endif]-->
 </body>
 </html>
