--- a/demos/demo-flat.html
+++ b/demos/demo-flat.html
@@ -12,19 +12,19 @@
 
 	<title>Grid Demo</title>
 
-	<link href="css/grid.css" rel="stylesheet">
-	<link href="css/skin.css" rel="stylesheet">
+	<link href="../css/grid.css" rel="stylesheet">
+	<link href="../css/skin.css" rel="stylesheet">
 
-	<script src="js/modernizr-2.7.1.min.js"></script>
+	<script src="../js/modernizr-2.7.1.min.js"></script>
 
 	<!--[if gt ie 8]><!-->
-	<script src="js/minify.min.js"></script>
-	<script src="js/scroll-no-hover.min.js"></script>
-	<script src="js/jquery-2.1.0.min.js"></script>
+	<script src="../js/minify.min.js"></script>
+	<script src="../js/scroll-no-hover.min.js"></script>
+	<script src="../js/jquery-2.1.0.min.js"></script>
 	<!--<![endif]-->
 
 	<!--[if lt IE 9]>
-	<script src="js/html5shiv.js"></script>
+	<script src="../js/html5shiv.js"></script>
 	<![endif]-->
 </head>
 <body class="demo">
