--- a/demos/demo-breakpoints.html
+++ b/demos/demo-breakpoints.html
@@ -19,7 +19,7 @@
 
 	<!--[if gt ie 8]><!-->
 	<script src="../js/minify.min.js"></script>
-	<script src="../js/scroll-no-hover.min.js"></script>
+	<script src="../js/no-hover.min.js"></script>
 	<script src="../js/jquery-2.1.0.min.js"></script>
 	<!--<![endif]-->
 
